# Projet-IA-LangChain-LLMs-

./: README.md  pyproject.toml
CH-1/: 1_LLM_CALL.ipynb  2_Messages.ipynb  3_Structured_Output.ipynb
CH-2/: 1_first_chain.ipynb  2_chain_with_customRunnable.ipynb  3_parallel_chains copy.ipynb  4_conditional_chain.ipynb
CH-3/: 1_ReAct_Agent_Intro.ipynb  2_ReAct_Agent_intro.ipynb  demo.py  init_db.py
CH-3/SalesDB/: sales.db
